# rpc_montior

./: .clang-format  CMakeLists.txt  README.md  install_dev.sh  run_test.sh
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/src/: Makefile  cmake_install.cmake
cmake/src/client/: Makefile  cmake_install.cmake
cmake/src/monitor/: Makefile  cmake_install.cmake  monitor
cmake/src/monitor.exe_autogen/: mocs_compilation.cpp
cmake/src/monitor.exe_autogen/MFUUT73ONZ/: moc_cpu_load_model.cpp  moc_cpu_softirq_model.cpp  moc_cpu_stat_model.cpp  moc_mem_model.cpp  moc_monitor_model_base.cpp  moc_net_model.cpp
cmake/src/monitor.exe_autogen/WTNNEUUVOU/: moc_cpu_load_model.cpp  moc_cpu_softirq_model.cpp  moc_cpu_stat_model.cpp  moc_mem_model.cpp  moc_monitor_model_base.cpp  moc_monitor_widget.cpp  moc_net_model.cpp
cmake/src/server/: Makefile  cmake_install.cmake  server
cmake/test/: Makefile  cmake_install.cmake  read_file_test  utils_test
cmake/tools/: Makefile  cmake_install.cmake
cmake/tools/proto/: Makefile  cmake_install.cmake  cpu_load.grpc.pb.cc  cpu_load.grpc.pb.h  cpu_load.pb.cc  cpu_load.pb.h  cpu_softirq.grpc.pb.cc  cpu_softirq.grpc.pb.h  cpu_softirq.pb.cc  cpu_softirq.pb.h  cpu_stat.grpc.pb.cc  cpu_stat.grpc.pb.h  cpu_stat.pb.cc  cpu_stat.pb.h  mem_info.grpc.pb.cc  mem_info.grpc.pb.h  mem_info.pb.cc  mem_info.pb.h  monitor_info.grpc.pb.cc  monitor_info.grpc.pb.h  monitor_info.pb.cc  monitor_info.pb.h  net_info.grpc.pb.cc  net_info.grpc.pb.h  net_info.pb.cc  net_info.pb.h
include/: color.sh
include/client/: rpc_client.h
include/monitor/: cpu_load_monitor.h  cpu_softirq_monitor.h  cpu_stat_monitor.h  mem_monitor.h  monitor_base.h  net_monitor.h
include/server/: rpc_manager.h
include/utils/: read_file.h  utils.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp  rpc_client.cpp
src/monitor/: CMakeLists.txt  cpu_load_monitor.cpp  cpu_softirq_monitor.cpp  cpu_stat_monitor.cpp  main.cpp  mem_monitor.cpp  net_monitor.cpp
src/qt/: cpu_load_model.cpp  cpu_load_model.h  cpu_softirq_model.cpp  cpu_softirq_model.h  cpu_stat_model.cpp  cpu_stat_model.h  main.cpp  mem_model.cpp  mem_model.h  monitor_model_base.cpp  monitor_model_base.h  monitor_widget.cpp  monitor_widget.h  net_model.cpp  net_model.h
src/server/: CMakeLists.txt  rpc_manager.cpp
src/utils/: read_file.cpp
test/: CMakeLists.txt
test/cpu_load/: cpu_load_test.cpp
test/read_file/: read_file_test.cpp  softirqs
tools/docker_runner/: 1  docker_run.sh  swtich_to_docker.sh
tools/dockerfile/: dockerfile
tools/dockerfile/install/abseil/: install_abseil.sh
tools/proto/: CMakeLists.txt  cpu_load.proto  cpu_softirq.proto  cpu_stat.proto  mem_info.proto  monitor_info.proto  net_info.proto
